@@ -20,7 +20,7 @@ import org.bukkit.Location;
  */
 public class SlimefunChunkData extends ADataContainer {
     private static final SlimefunBlockData INVALID_BLOCK_DATA = new SlimefunBlockData(
-            new Location(Bukkit.getWorlds().get(0), Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE),
+            new Location(Bukkit.getWorlds().getFirst(), Double.MAX_VALUE, Double.MAX_VALUE, Double.MAX_VALUE),
             "INVALID_BLOCK_DATA_SF_KEY");
     private final Chunk chunk;
     private final Map<String, SlimefunBlockData> sfBlocks;
